Re order A Little Sneak Peek sectio on mobile, fix blur bubbles on mobile

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1771,6 +1771,7 @@ header.site-header.header_divided_nav .site-header__mobile-nav > .site-header__i
   margin: 0 auto;
   text-align: center;
   z-index: 1;
+  padding: 0 20px;
 }
 .banner-blur .banner-blur__content h2 {
   font-size: 3.5em;
@@ -1778,9 +1779,15 @@ header.site-header.header_divided_nav .site-header__mobile-nav > .site-header__i
   font-family: "Playfair Display";
   font-weight: 500;
 }
+@media screen and (max-width: 1135px) {
+  .banner-blur .banner-blur__content h2 {
+    font-size: 2.1em;
+    margin-bottom: 35px;
+  }
+}
 .banner-blur .banner-blur__content p {
   color: #fff;
-  font-size: 1.85rem;
+  font-size: 1.7rem;
   line-height: 1.75;
   font-family: "Montserrat";
 }
@@ -1794,9 +1801,18 @@ header.site-header.header_divided_nav .site-header__mobile-nav > .site-header__i
   left: -2vw;
   width: 30vw;
   height: 24vw;
-  filter: blur(60px);
-  -webkit-animation: blob-green 5s infinite;
-  animation: blob-green 5s infinite;
+  filter: blur(4vw);
+  -webkit-animation: blob-green 8s infinite;
+  animation: blob-green 8s infinite;
+}
+@media screen and (max-width: 1135px) {
+  .banner-blur .bubble.green {
+    width: 90%;
+    height: 50%;
+    top: -18vw;
+    left: -15vw;
+    filter: blur(5vw);
+  }
 }
 .banner-blur .bubble.orange {
   background-color: #EF927E;
@@ -1804,9 +1820,18 @@ header.site-header.header_divided_nav .site-header__mobile-nav > .site-header__i
   left: -8vw;
   width: 70vw;
   height: 28vw;
-  filter: blur(150px);
-  -webkit-animation: blob-orange 5s infinite;
-  animation: blob-orange 5s infinite;
+  filter: blur(8vw);
+  -webkit-animation: blob-orange 8s infinite;
+  animation: blob-orange 8s infinite;
+}
+@media screen and (max-width: 1135px) {
+  .banner-blur .bubble.orange {
+    width: 105%;
+    height: 85%;
+    bottom: -30vw;
+    left: -35vw;
+    filter: blur(10vw);
+  }
 }
 .banner-blur .bubble.yellow {
   background-color: #FBE682;
@@ -1814,9 +1839,18 @@ header.site-header.header_divided_nav .site-header__mobile-nav > .site-header__i
   right: -20vw;
   width: 55vw;
   height: 38vw;
-  filter: blur(150px);
-  -webkit-animation: blob-yellow 5s infinite;
-  animation: blob-yellow 5s infinite;
+  filter: blur(8vw);
+  -webkit-animation: blob-yellow 8s infinite;
+  animation: blob-yellow 8s infinite;
+}
+@media screen and (max-width: 1135px) {
+  .banner-blur .bubble.yellow {
+    width: 65%;
+    height: 55%;
+    bottom: -20vw;
+    right: -16vw;
+    filter: blur(10vw);
+  }
 }
 .banner-blur .bubble.purple {
   background-color: #79727A;
@@ -1824,10 +1858,19 @@ header.site-header.header_divided_nav .site-header__mobile-nav > .site-header__i
   left: 36vw;
   width: 30vw;
   height: 45vw;
-  filter: blur(100px);
+  filter: blur(5vw);
   transform: skewX(-20deg);
-  -webkit-animation: blob-purple 5s infinite;
-  animation: blob-purple 5s infinite;
+  -webkit-animation: blob-purple 8s infinite;
+  animation: blob-purple 8s infinite;
+}
+@media screen and (max-width: 1135px) {
+  .banner-blur .bubble.purple {
+    width: 70%;
+    height: 80%;
+    top: -27vw;
+    left: 46vw;
+    filter: blur(8vw);
+  }
 }
 
 /*
@@ -1855,10 +1898,10 @@ header.site-header.header_divided_nav .site-header__mobile-nav > .site-header__i
     transform: translate(0, 0) scale(1);
   }
   33% {
-    transform: translate(-140, 39px) scale(1.25);
+    transform: translate(-78x, 89px) scale(0.83);
   }
   66% {
-    transform: translate(-78x, 89px) scale(0.83);
+    transform: translate(-150, -49px) scale(1.25);
   }
   100% {
     transform: translate(0, 0) scale(1);
@@ -1919,7 +1962,7 @@ header.site-header.header_divided_nav .site-header__mobile-nav > .site-header__i
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 .img-w-text-full .content-bg__img {
   position: absolute;
@@ -2105,6 +2148,11 @@ header.site-header.header_divided_nav .site-header__mobile-nav > .site-header__i
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media screen and (max-width: 1135px) {
+  .sneak-peek__wrapper .sneak-peek__content-col {
+    order: 1;
+  }
 }
 .sneak-peek__wrapper .sneak-peek__content {
   text-align: center;
