--- a/src/scss/partials/sections/_a-little-sneak-peek.scss
+++ b/src/scss/partials/sections/_a-little-sneak-peek.scss
@@ -11,11 +11,14 @@
       width: 100%;
     }
   }
-
+  
   .sneak-peek__content-col {
     display: flex;
     justify-content: center;
     align-items: center;
+    @include media-max-width($large-down) {
+      order: 1;
+    }
     // background-color: #282828;
   }
   .sneak-peek__content {
